# esp32-monitor

./: .gitignore  README.md  docker-compose.yml  implementation_plan.md  task.md
.github/: copilot-instructions.md
esp32_firmware/: CMakeLists.txt  sdkconfig.defaults
esp32_firmware/main/: CMakeLists.txt  Kconfig.projbuild  ble_server.c  ble_server.h  display_factory.hpp  display_font.hpp  display_interface.cpp  display_interface.hpp  display_ssd1306.c  display_ssd1306.cpp  display_ssd1306.h  display_ssd1306.hpp  display_st7789.cpp  display_st7789.hpp  main.c  main.cpp  recovery_portal.c  recovery_portal.h  renderer.cpp  renderer.hpp
pc_service/: .dockerignore  Dockerfile  app_state.py  dashboard.py  discovery.py  metrics.py  monitor_service.py  protocol.py  requirements.txt  telemetry_sender.py
scripts/: install_pc_service_systemd.sh
